# fastapi_book_management_system

./: .pre-commit-config.yaml  README.md  pyproject.toml
app/: constants.py  main.py  run_migrations.py  utils.py
app/core/: config.py  validators.py
app/crud/: auth.py  author.py  authors.py  book.py  books.py  user.py
app/migrations/: 001_create_tables.sql  002_add_isbn_field_to_books.sql  _create_author_procedure.sql  _create_book_procedure.sql  _create_user_procedure.sql  _delete_author_procedure.sql  _delete_book_procedure.sql  _get_authors_procedure.sql  _get_books_procedure.sql  _get_user_procedure.sql  _update_author_procedure.sql  _update_book_procedure.sql
app/routers/: author.py  authors.py  book.py  books.py  user.py
app/schemas/: author.py  authors.py  book.py  books.py  user.py
app/tests/: test_integration.py  test_user.py  test_validators.py
